[gd_scene load_steps=3 format=3 uid="uid://556abvc22nkf"]

[ext_resource type="Script" path="res://floors/floor_1.gd" id="1_q5617"]
[ext_resource type="PackedScene" uid="uid://cupqqwddnk40" path="res://Player.tscn" id="4_br6l7"]

[node name="Floor1" type="Node2D"]
script = ExtResource("1_q5617")

[node name="MarkerW3" type="Marker2D" parent="."]
unique_name_in_owner = true
position = Vector2(532, 632)

[node name="MarkerW2" type="Marker2D" parent="."]
unique_name_in_owner = true
position = Vector2(724, 728)

[node name="MarkerWN2" type="Marker2D" parent="."]
unique_name_in_owner = true
position = Vector2(724, 8)

[node name="PlayerTest" parent="." instance=ExtResource("4_br6l7")]
position = Vector2(1136, 436)
